<resources>
    <string name="app_name">PredictLive</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="remmember_me">مرا به خاطر بسپار! </string>
    <string name="login">ورود</string>
    <string name="forgot_your_password">اطلاعات ورود را فراموش کرده اید؟ </string>
    <string name="do_not_have_a_account">تا حالا ثبت نام نکرده ام/</string>
    <string name="create_one">ثبت نام</string>
    <string name="l">L</string>
    <string name="live_predict">Live Predict</string>
    <string name="next">Next</string>
    <string name="do_have_an_account">آیا ثبت نام کرده اید؟/</string>
    <string name="_98">+98</string>
    <string name="todo">TODO</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="did_not_the_code">ایا کد فعال سازی را دریافت نکرده اید؟</string>
    <string name="resend_code">ارسال دوباره</string>
    <string name="sendcodetext">ما یک کد جهت فعال سازی به شماره 09184591468 ارسال کردیم!لطفا آن را وارد کنید.</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="confirm">تکرار رمز عبور</string>
    <string name="register">ثبت نام</string>
    <string name="registration_completed_successfully">Registration completed successfully!</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="mehran_akbari">Mehran Akbari</string>
    <string name="this_week">This Week</string>
    <string name="all_time">All Time</string>
    <string name="shop">Shop</string>
    <string name="ranking">Ranking</string>
    <string name="setting">Setting</string>
    <string name="_5450">5450</string>
    <string name="score">Score</string>
    <string name="_23">23</string>
    <string name="rank">Rank</string>
    <string name="_5221">5221</string>
    <string name="_4870">4870</string>
    <string name="_3580">3580</string>
    <string name="_4">4</string>
    <string name="end">End</string>
    <string name="manchester">Manchester</string>
    <string name="_7">+7</string>
    <string name="_2500">2500</string>
    <string name="loading">درحال اتصال…</string>
    <string name="warning">هشدار!</string>
    <string name="please_enter_username">لطفا نام کاربری را وارد نمایید.</string>
    <string name="done">تایید</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_add">Add</string>
    <string name="change">Change</string>
    <string name="recovery_logininfo">بازیابی اطلاعات</string>
    <string name="upload">upload</string>
    <string name="_ok">تایید</string>


</resources>