<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/logingradint"
    tools:context=".LoginActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:orientation="vertical">
      <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical|center_horizontal">
          <View
              android:layout_width="130dp"
              android:layout_height="130dp"
              android:background="@drawable/loginlogo"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="20dp"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:text="@string/l"
              android:layout_marginTop="20sp"
              android:layout_gravity="center_horizontal"
              android:textSize="90sp"
              />

      </FrameLayout>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/live_predict"
          android:textSize="22sp"
         android:layout_marginTop="2dp"
          android:layout_gravity="center_horizontal|center_vertical"
          android:textColor="#C6CBD4"/>
  </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center"
        >



    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawablePadding="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_username"
        style="@style/myEditText"
        /> <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_password"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
      style="@style/myEditText"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/remmember_me"
        android:switchMinWidth="70dp"
         android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_marginTop="15dp"
        android:layout_gravity="start"

        android:layout_marginStart="12dp"
        android:track="@drawable/loginswitchtrack"
        android:thumb="@drawable/loginswitchthumb"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="47dp"
    android:text="@string/login"
    android:textSize="25sp"
    android:textAllCaps="false"
    android:layout_marginTop="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/loginbutton"
    android:textColor="#FFF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#9CA0A7"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"/>
</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_createaccounttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:textColor="#9CA0A7"
            android:layout_marginTop="10dp"
            android:text="@string/do_not_have_a_account"
            android:layout_alignParentBottom="true"
           android:layout_marginStart="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
           android:layout_toEndOf="@id/txt_createaccounttext"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/crate_one"

            android:textColor="#E10D0D"
            android:textSize="20sp" />
    </RelativeLayout>



</LinearLayout>