<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".LoginActivity">
    <View
        android:id="@+id/Viewlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/loginlogoprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/l"
        android:fontFamily="@font/simsun"
        android:layout_marginTop="35sp"
        android:layout_gravity="center_horizontal"
        android:textSize="90sp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/txt_namelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_predict"
        android:textSize="22sp"
        android:fontFamily="@font/andalus"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textColor="#424243"
        android:layout_below="@id/Viewlogo"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_namelogo"
        android:background="@drawable/loginprofileshape"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:weightSum="9"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="6"
            android:weightSum="7"
            android:baselineAligned="false">
            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:weightSum="5"
                tools:ignore="NestedWeights,UselessParent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name_loginprofileactivity"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#AAB3BE"
                style="@style/myEditText"
                android:textSize="19sp"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                android:layout_marginStart="5dp"
                tools:ignore="NestedWeights"
                android:backgroundTintMode="add"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username_loginprofileactivity"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#AAB3BE"
                android:textSize="19sp"
                style="@style/myEditText"
                android:hint="@string/username"
                android:layout_marginStart="5dp"
                android:backgroundTintMode="add"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password_loginprofileactivity"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#AAB3BE"
                android:textSize="19sp"
                style="@style/myEditText"
                android:hint="@string/password"
                android:layout_marginStart="5dp"
                android:backgroundTintMode="add"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_confirm_loginprofileactivity"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#AAB3BE"
                android:textSize="19sp"
                style="@style/myEditText"
                android:hint="@string/confirm"
                android:layout_marginStart="5dp"
                android:backgroundTintMode="add"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_phonenumber_loginprofileactivity"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#AAB3BE"
                android:textSize="19sp"
                style="@style/myEditText"
                android:hint="@string/phone_number"
                android:layout_marginStart="5dp"
                android:backgroundTintMode="add"/>

        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_loginprofileactivity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/register"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/loginbutton"
                android:textColor="#FFF"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/txt_loginaccounttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/andalus"
                android:textColor="#9CA0A7"
                android:layout_marginTop="10dp"
                android:text="@string/do_have_an_account"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/txt_loginclick_loginprofileactivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/txt_loginaccounttext"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:text="@string/login"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/andalus"
                android:textColor="#E10D0D"
                android:textSize="20sp" />
        </RelativeLayout>



    </LinearLayout>
</RelativeLayout>