<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sectiononehomegradint"
        android:id="@+id/section1"

        >
        <TextView
            android:id="@+id/txt_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:fontFamily="@font/andalus"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:weightSum="4"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_toolbar"
            android:orientation="horizontal"
            android:id="@+id/hometab"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/tabbuttonselect"
                android:text="@string/this_week"
                android:textSize="20sp"
                android:fontFamily="@font/andalus"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:layout_margin="1dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/all_time"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/andalus"
                android:textColor="#FFF"
                android:background="@drawable/tabbutton"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/loginlogo"
            android:layout_below="@+id/hometab"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mehran_akbari"
            android:fontFamily="@font/andalus"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:layout_below="@id/img_user"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>





    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:gravity="top|center"
        android:layout_marginTop="20dp"
        android:layout_below="@id/section1">

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:background="@drawable/gradintscoreandrank">
            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/scoreshape"
                >
                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5A5858"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:fontFamily="@font/bernard"/>


            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andalus"
                android:layout_marginTop="10sp"
                android:text="@string/score"
                android:textColor="#FFF"
                android:textSize="30sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:background="@drawable/gradintscoreandrank">
            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/rankshape"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23"
                    android:textColor="#5A5858"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:fontFamily="@font/bernard"/>



            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andalus"
                android:layout_marginTop="10sp"
                android:text="@string/rank"
                android:textColor="#FFF"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout
    >